--- a/css/styles.css
+++ b/css/styles.css
@@ -139,3 +139,47 @@ a.custom-card:hover {
 .checked {
   color: orange;
 }
+
+/*Valoracion con estrellas*/
+.estrella {
+  justify-content: center;
+  
+}
+:root {
+  --color-inactivo: #5f5050;
+  --color-hover: #ffa400;
+}
+.valoracion {
+  display: flex;
+  flex-direction: row;
+
+
+}
+.valoracion button {
+  background-color: initial;
+  border: 0;
+  color: var(--color-inactivo);
+}
+.valoracion button:hover {
+  cursor: pointer;
+  color: var(--color-hover);
+}
+button:nth-child(1):hover ~ button {
+  color: var(--color-hover);
+}
+button:nth-child(2):hover ~ button {
+  color: var(--color-hover);
+}
+button:nth-child(3):hover ~ button {
+  color: var(--color-hover);
+}
+button:nth-child(4):hover ~ button {
+  color: var(--color-hover);
+}
+button:nth-child(5):hover ~ button {
+  color: var(--color-hover);
+}
+.commentTitle {
+color: black;  
+text-align: center;
+}
