--- a/css/styles.css
+++ b/css/styles.css
@@ -141,45 +141,33 @@ a.custom-card:hover {
 }
 
 /*Valoracion con estrellas*/
-.estrella {
-  justify-content: center;
-  
+.ec-stars-wrapper {
+	/* Espacio entre los inline-block (los hijos, los `a`)*/
+	font-size: 0;
+	display: inline-block;
 }
-:root {
-  --color-inactivo: #5f5050;
-  --color-hover: #ffa400;
+.ec-stars-wrapper a {
+	text-decoration: none;
+	display: inline-block;
+	/* Volver a dar tamaño al texto */
+	font-size: 32px;
+	font-size: 2rem;
+	
+	color: #888;
 }
-.valoracion {
-  display: flex;
-  flex-direction: row;
 
+.ec-stars-wrapper:hover a {
+	color: #FFDB58;
+}
+/*
+ * El selector de hijo, es necesario para aumentar la especifidad
+ */
+.ec-stars-wrapper > a:hover ~ a {
+	color: rgb(27, 23, 23);
+}
 
-}
-.valoracion button {
-  background-color: initial;
-  border: 0;
-  color: var(--color-inactivo);
-}
-.valoracion button:hover {
-  cursor: pointer;
-  color: var(--color-hover);
-}
-button:nth-child(1):hover ~ button {
-  color: var(--color-hover);
-}
-button:nth-child(2):hover ~ button {
-  color: var(--color-hover);
-}
-button:nth-child(3):hover ~ button {
-  color: var(--color-hover);
-}
-button:nth-child(4):hover ~ button {
-  color: var(--color-hover);
-}
-button:nth-child(5):hover ~ button {
-  color: var(--color-hover);
-}
 .commentTitle {
 color: black;  
 text-align: center;
 }
+
